version/1.1/_sources/api/ansys/scade/pyalmgw/llrs/LLRExport.rst.txt






:class:`LLRExport`
==================

.. py:class:: ansys.scade.pyalmgw.llrs.LLRExport(project)

   
   Entry point for exporting the surrogate model.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: LLRExport

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~dump_model`
            - Generate the surrogate model as a dictionary.
          * - :py:attr:`~get_export_classes`
            - Return the export classes applicable to a project.
          * - :py:attr:`~get_url`
            - Return the URL corresponding to an oid.
          * - :py:attr:`~read_schema`
            - Parse the input configuration schema.
          * - :py:attr:`~write`
            - Write the dictionary to a file.



   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~classes`
            - 
          * - :py:attr:`~diagrams`
            - 
          * - :py:attr:`~export_classes`
            - 
          * - :py:attr:`~project`
            - 
          * - :py:attr:`~project_id`
            - 
          * - :py:attr:`~roots`
            - 
          * - :py:attr:`~schema`
            - 
          * - :py:attr:`~version`
            - 






Import detail
-------------

.. code-block:: python

    from ansys.scade.pyalmgw.llrs import LLRExport


Attribute detail
----------------

.. py:attribute:: classes

.. py:attribute:: diagrams
   :value: False


.. py:attribute:: export_classes
   :value: []


.. py:attribute:: project

.. py:attribute:: project_id
   :value: None


.. py:attribute:: roots

.. py:attribute:: schema
   :value: None


.. py:attribute:: version
   :value: 0




Method detail
-------------

.. py:method:: dump_model(diagrams: bool = False, version: int = 0, empty: str = '') -> dict

   
   Generate the surrogate model as a dictionary.


   :Parameters:

       **diagrams** : :ref:`bool <python:bltin-boolean-values>`
           Whether the images should be generated, for applicable elements.

       **version** : :class:`python:int`
           Target version of the surrogate model.
           
           * 0 (LLRS.VCUSTOM): Default format + icons + urls. Applies to custom connectors.
           * 4 (LLRS.V194): Default format for ALM Gateway interface.

       **empty** : :class:`python:str`
           Value to use when the value of an attribute is empty. This is required for
           some target ALM tools such as DOORS for SCADE releases up to 2025 R1.



   :Returns:

       :class:`python:dict`
           Surrogate model.











   ..
       !! processed by numpydoc !!

.. py:method:: get_export_classes(project: scade.model.project.stdproject.Project) -> List[LLRS]

   
   Return the export classes applicable to a project.
















   ..
       !! processed by numpydoc !!

.. py:method:: get_url(oid: str) -> str

   
   Return the URL corresponding to an oid.
















   ..
       !! processed by numpydoc !!

.. py:method:: read_schema(path: pathlib.Path)

   
   Parse the input configuration schema.
















   ..
       !! processed by numpydoc !!

.. py:method:: write(llrs: dict, path: pathlib.Path)

   
   Write the dictionary to a file.
















   ..
       !! processed by numpydoc !!




